k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kampusumden-ingress
spec:
  rules:
    - host: api.kampusumden.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kampusumden-backend-service
                port:
                  number: 80
